--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,9 @@
 name = "limbus-72b"
-compatibility_date = "2024-01-01"
+compatibility_date = "2024-04-01"
 # 构建输出目录为当前目录（根目录）
 pages_build_output_dir = "."
 
+# D1 数据库绑定
 [[d1_databases]]
 binding = "DB"
 database_name = "limbus-db"
